--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,25 +9,47 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - name: Install dependencies
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
+
+      # Fetch updated data
       - name: Run data fetch script
         env:
           API_KEY: ${{ secrets.API_KEY }}
         run: python src/api/fetch_data.py
+
+      # Commit the updated JSON file
       - name: Commit and push changes
         run: |
           git config user.name 'github-actions'
           git config user.email 'github-actions@github.com'
           git add data/pricing_data.json
-          git commit -m 'Update pricing data'
+          git commit -m 'Update pricing data' || echo "No changes to commit"
           git push
+
+      # 🆕 Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'  # Or whatever version you need
+
+      # 🆕 Install frontend dependencies and build
+      - name: Install NPM dependencies and Build Website
+        working-directory: src/web
+        run: |
+          npm install
+          npm run build
+
+      # Deploy the built website
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
